force-app/main/default/objects/Secondary_Invoice_Item__c/Secondary_Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Secondary Invoice Item</label>
    <nameField>
        <displayFormat>Sec-InvItem - {0000}</displayFormat>
        <label>Secondary Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>