force-app/main/default/objects/Secondary_Invoice_Item__c/fields/After_Scheme_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>After_Scheme_Unit_Price__c</fullName>
    <label>After Scheme Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>