force-app/main/default/objects/Secondary_Invoice_Item__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <formula>IF(TEXT( Secondary_Invoice__r.Customer__r.State__c) == TEXT(Secondary_Invoice__r.Store__r.State__c) ,Tax_Amount__c /2 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>