force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Customer_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Customer_GSTIN__c</fullName>
    <formula>Secondary_Invoice__r.Customer__r.GST_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer GSTIN</label>
    <type>Text</type>
</CustomField>