force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Difference_Category_Slab_Unit_Per_EA__c.field-meta.xml
<CustomField>
    <fullName>Difference_Category_Slab_Unit_Per_EA__c</fullName>
    <formula>Before_Category_Slab_Unit_Price__c - After_Category_Slab_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Category Slab Unit Per EA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>