force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Distributor_Stock__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Stock__c</fullName>
    <label>Distributor Stock</label>
    <referenceTo>Distributor_Stock__c</referenceTo>
    <relationshipLabel>Secondary Invoice Items</relationshipLabel>
    <relationshipName>Secondary_Invoice_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>