force-app/main/default/objects/Secondary_Invoice_Item__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <formula>Secondary_Invoice__r.Customer__r.GST_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSTIN</label>
    <type>Text</type>
</CustomField>