force-app/main/default/objects/Secondary_Invoice_Item__c/fields/HSN_SAC__c.field-meta.xml
<CustomField>
    <fullName>HSN_SAC__c</fullName>
    <formula>Product__r.HSN_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSN/SAC</label>
    <type>Text</type>
</CustomField>