force-app/main/default/objects/Secondary_Invoice_Item__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <formula>IF(TEXT( Secondary_Invoice__r.Customer__r.State__c) != TEXT(Secondary_Invoice__r.Store__r.State__c) ,Tax_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>