force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <label>Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Secondary Invoice Items</relationshipLabel>
    <relationshipName>Secondary_Invoice_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>