force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Secondary Invoice Items</relationshipLabel>
    <relationshipName>Secondary_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>