force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Qty_in_Cases__c.field-meta.xml
<CustomField>
    <fullName>Qty_in_Cases__c</fullName>
    <formula>Quantity__c / Product__r.Uom_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty in Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>