force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Quantity_in_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_Kgs__c</fullName>
    <formula>Quantity__c * Product__r.Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity in Kgs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>