force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Scheme_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Claim_Amount__c</fullName>
    <formula>(Before_Scheme_Unit_Price__c - After_Scheme_Unit_Price__c) * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>