force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Secondary_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice__c</fullName>
    <label>Secondary Invoice</label>
    <referenceTo>Secondary_Invoice__c</referenceTo>
    <relationshipLabel>Secondary Invoice Items</relationshipLabel>
    <relationshipName>Secondary_Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>