force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secondary Invoice Items</relationshipLabel>
    <relationshipName>Secondary_Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>