force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount__c</fullName>
    <formula>Total_Amount__c - Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>