force-app/main/default/objects/Secondary_Invoice_Item__c/fields/Total_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Value__c</fullName>
    <formula>Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>